kubernetes-ingress-controller/namespace-definition.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-namespace
  labels:
    app: ingress-services
    type: ingress-namespace
